Fixed avatar spacing issue against messages.

--- a/css/main.css
+++ b/css/main.css
@@ -565,7 +565,7 @@
 	color: white;
 	background-color: #15843c;
 }
-.message-group .avatar-large {left: 10px;}
+.message-group .wrapper-2F3Zv8 {left: 10px;}
 
 .chat .has-more button {
 	background: #282828 !important;
